fixed image issues on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -322,7 +322,11 @@ h1, h2, h3{
 
 /* Media Queries */
 
-@media(min-width: 450px){
+@media(min-width: 350px){
+    #header{
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url('../images/model11-min-cropped.jpg') center/cover no-repeat fixed;
+    }
+
     .work-bottom{
         grid-template-columns: repeat(2, 1fr);
         column-gap: 3rem;
